# clean-architecture-rust

./: .env.sample  Cargo.toml  README.md
corporation-api/: Cargo.toml
corporation-api/src/: main.rs
corporation-api/src/application/commands/create_user/: use_case.rs
corporation-api/src/application/queries/read_user/: dto.rs  use_case.rs
corporation-api/src/domain/entities/: mod.rs  project.rs  user.rs
corporation-api/src/domain/repositories/: project.rs  user.rs
corporation-api/src/domain/value_objects/: email.rs  mod.rs  project_id.rs  user_id.rs
corporation-api/src/framework/: mod.rs
corporation-api/src/infrastructure/: mod.rs
corporation-api/src/infrastructure/database/: mod.rs
corporation-api/src/infrastructure/persistences/: mod.rs  project.rs  user.rs
corporation-api/src/presentation/routes/: mod.rs  status_handlers.rs  user_handlers.rs
