[package]
name = "corporation-api"
version = "0.1.0"
edition = "2024"

[dependencies]
actix-web = "4"
dotenv = "0.15.0"
log = "0.4.27"
sea-orm = { version = "1.1.14", features = ["debug-print", "macros", "runtime-tokio-native-tls", "sqlx-postgres"] }
serde = { version = "1.0.219", features = ["derive"] }
thiserror = "2.0.12"
tracing = "0.1.41"
tracing-subscriber = "0.3.19"
